--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "@angular/platform-browser-dynamic": "^16.0.4",
     "@angular/router": "^16.0.4",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@popperjs/core": "^2.11.6",
     "@types/socket.io-client": "^3.0.0",
     "bootstrap": "^5.3.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.6.1",
-    "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.4",
+    "@angular/localize": "^16.0.4",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -37,6 +38,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "tslib": "^2.5.3",
     "typescript": "~4.9.4"
   }
 }
